create single console sample device named tromm. - connecting between HTML5 UI and device. - TODO   - change chat_message - is temp class from boost sample - to own message class.   - On Service::DoRequest, apply wait condion variable to wait until take response.   - Implement tromm functions.

--- a/smart_network/sample_storage/common/css/rabbit_hole.css
+++ b/smart_network/sample_storage/common/css/rabbit_hole.css
@@ -59,7 +59,7 @@ body {
 	position: absolute;
 	left: 0px;
 	top: 50px;
-	width: 95%;
-	height: 90%;
+	width: 900px;
+	height: 450px;
 	text-align: center;
 }
